Make DataNodeList observable
Signed-off-by: Jakub Šmrha <kuba.smrha@gmail.com>